--- a/.github/workflows/daily-schedule.yml
+++ b/.github/workflows/daily-schedule.yml
@@ -1,11 +1,9 @@
 name: Daily Kids Schedule
-
 on:
   schedule:
     # Запускать каждый день в 9:00 утра по Москве (04:00 UTC)
     - cron: '0 9 * * *'
   workflow_dispatch:  # Позволяет запускать вручную
-
 jobs:
   notify:
     runs-on: ubuntu-latest
@@ -25,6 +23,9 @@ jobs:
         pip install aiohttp
         
     - name: Run Daily Schedule
+      env:
+        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
       run: |
         python kids_schedule.py
         
